# datech_v536_app

./: CMakeLists.txt  ConfigTextFile.cpp  DaUpStreamDelegate.cpp  Makefile  README.md  SB_Network.cpp  SB_System.cpp  SB_message.cpp  arm-lindenis-v536-musl.cmake  bb_api.cpp  bb_micom.cpp  build.sh  daSystemSetup.cpp  dagpio.cpp  data_log.cpp  datools.cpp  evdev_input.cpp  gsensor.cpp  hdlc.cpp  led_process.cpp  mixwav.cpp  pai_r_data.cpp  pai_r_datasaver.cpp  recorder.cpp  recorder_ex.cpp  safe_driving_monitoring.cpp  serial.cpp  sysfs.cpp  system_log.cpp  ttyraw.cpp  user_data.cpp  wavplay.cpp
include/: ConfigTextFile.h  DaUpStreamDelegate.h  SB_Network.h  SB_System.h  SB_message.h  bb_api.h  bb_micom.h  daSystemSetup.h  daappconfigs.h  dagpio.h  data_log.h  datools.h  datypes.h  daversion.h  evdev_input.h  gsensor.h  hdlc.h  hwdisp_def.h  iio_utils.h  led_process.h  mixwav.h  pai_r_data.h  pai_r_datasaver.h  recorder.h  recorder_ex.h  safe_driving_monitoring.h  serial.h  sysfs.h  system_log.h  ttyraw.h  user_data.h  wavplay.h
include/i3/: sc_interface.h
include/v5/: sc_interface.h  veInterface.h
include/v536/: sc_interface.h
include/v536/linux/: g2d_driver.h  int-l64.h  sunxi_camera_v2.h
ini/: recorder3-datech-3ch.ini
